# metro-diary-map

./: .gitignore  README.md  package-lock.json
.github/workflows/: deploy.yml
data/: 1_extract.py  3_entities.py  4_geocode.py  5_process.py  5a_neighborhoods.py  bench.py  entities.py  geocode.py  meta_fetch.py  parse.py  pyproject.toml
data/input/: NYC NEIGHBORHOODS.kml  area_places.geojson
data/output/: diary_entities.parquet  diary_entities1.parquet  diary_entities_test.parquet  diary_entries.parquet  diary_geocoded.parquet  geocode_cache.parquet  metropolitan_diary.parquet  neighborhoods.geojson  neighborhoods_admin_levels.csv
diary-map/: README.md  package-lock.json  package.json  vite.config.js
diary-map/src/: app.html  global.css
diary-map/src/lib/components/: IntroScreen.svelte
diary-map/src/routes/: +layout.js  +layout.svelte  +page.svelte  toner_style.json
diary-map/src/routes/about/: +page.svelte  about.md
diary-map/static/: watercolor-bw.json  watercolor.json
diary-map/static/data/: areas.geojson  boroughs.geojson  locations.geojson  subway.geojson  thumbnails.json
