[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "lxml>=6.1.1",
    "openai>=2.43.0",
    "polars>=1.41.2",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.68.3",
]
